# vscode-task-runner

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  README.md  notes.txt  pyproject.toml  test.py  vtr.py
.devcontainer/: devcontainer.json
.github/workflows/: pre-commit_update.yml  publish.yml  test.yml
src/: __main__.py  console.py  constants.py  executor.py  helpers.py  models.py  task.py  task_parser.py  terminal_task_system.py  typehints.py
tests/: conftest.py  test_console.py  test_helpers.py  test_json_parser.py  test_main.py  test_parser.py  test_task_parser.py  test_terminal_task_system.py  test_variables.py
tests/test_console/: test_input_cli.py  test_not_found.py  test_parse_args.py
tests/test_console/test_list_inputs/: test_list_inputs.py
tests/test_console/test_not_supported/: test_not_supported.py
tests/test_executor/test_collect_levels/: test_collect_levels.py
tests/test_executor/test_collect_levels2/: test_collect_levels2.py
tests/test_executor/test_depends_on/: test_collect_tasks.py
tests/test_executor/test_execute_tasks/: test_execute_tasks.py
tests/test_executor/test_task_args/: test_task_args.py
tests/test_executor/test_task_command/: test_task_command.py
tests/test_executor/test_task_cwd/: test_task_cwd.py
tests/test_executor/test_task_env/: test_task_env.py
tests/test_executor/test_task_env_null/: test_task_env_null.py
tests/test_executor/test_task_env_types/: test_task_env_types.py
tests/test_executor/test_task_is_virtual/: test_task_is_virtual.py
tests/test_executor/test_task_shell/: test_task_shell.py
tests/test_executor/test_task_subprocess/: test_task_subprocess.py
tests/test_models/: test_model_options.py  test_model_properties.py  test_model_shell.py  test_model_strings.py  test_model_task.py  test_task.py
tests/test_models/test_default_input/: test_default_input.py
tests/test_models/test_empty_string_input/: test_empty_string_input.py
tests/test_models/test_pickstring_input/: test_pickstring_input.py
tests/test_parser/: test_parser.py
tests/test_parser/test_code_workspace/: test.code-workspace  test_code_workspace.py
tests/test_parser/test_complex_parsing/: test_complex_parsing.py  test_missing_file.py
tests/test_parser/test_invalid_code_workspace/: test_invalid_code_workspace.py
tests/test_parser/test_unicode/: test_unicode.py
tests/test_tasks/test_args/: test_args.py
tests/test_tasks/test_command/: test_command.py
tests/test_tasks/test_complex_execution/: test_complex_execution.py
tests/test_tasks/test_cwd/: test_cwd.py
tests/test_tasks/test_default_build_task/: test_default_build_task.py
tests/test_tasks/test_depends_on/: test_depends_on.py
tests/test_tasks/test_depends_order/: test_depends_order.py
tests/test_tasks/test_env/: test_env.py
tests/test_tasks/test_global_args/: test_global_args.py
tests/test_tasks/test_global_command/: test_global_command.py
tests/test_tasks/test_global_command_args/: test_global_command_args.py
tests/test_tasks/test_is_virtual/: test_is_virtual.py
tests/test_tasks/test_options_setting_global/: test_options_setting_global.py
tests/test_tasks/test_options_setting_global_os/: test_options_setting_global_os.py
tests/test_tasks/test_options_setting_task/: test_options_setting_task.py
tests/test_tasks/test_options_setting_task_os/: test_options_setting_task_os.py
tests/test_tasks/test_shell/: test_shell.py
tests/test_tasks/test_task_setting/: test_task_setting.py
tests/test_utils/: test_paths.py  test_picker.py  test_shell.py  test_strings.py
tests/test_variables/: test_resolve.py
tests/test_vscode/: test_task_configuration.py  test_terminal_task_system.py
tests2/: conftest.py
tests_old/: conftest.py  test_console.py  test_helpers.py  test_terminal_task_system.py  test_variables.py
tests_old/test_parser/: test_parser.py
vscode_task_runner/: __main__.py  console.py  constants.py  exceptions.py  executor.py  helpers.py  models.py  parser.py  printer.py  task.py  task_executor.py  terminal_task_system.py  variables.py
vscode_task_runner/models/: arg_parser.py  enums.py  execution_level.py  input.py  options.py  properties.py  shell.py  strings.py  task.py  tasks.py
vscode_task_runner/models2/: task.py  tasks.py
vscode_task_runner/utils/: paths.py  picker.py  shell.py  strings.py
vscode_task_runner/variables/: resolve.py  runtime.py  static.py
vscode_task_runner/vscode/: task_configuration.py  terminal_task_system.py
vscode_task_runner2/: __main__.py  console.py  constants.py  exceptions.py  executor.py  parser.py  variables.py
vscode_task_runner2/models/: config.py  enums.py  execution_level.py  input.py  inputs.py  options.py  parser.py  properties.py  shell.py  strings.py  task.py  tasks.py
vscode_task_runner2/utils/: paths.py  shell.py
vscode_task_runner2/variables/: resolve.py  runtime.py
vscode_task_runner2/vscode/: task_configuration.py  terminal_task_system.py
vscode_task_runner_old/: __main__.py  console.py  constants.py  executor.py  helpers.py  parser.py  printer.py  task.py  terminal_task_system.py  variables.py
vtr/: __main__.py  console.py  constants.py  exceptions.py  executor.py  helpers.py  input_vars.py  json_parser.py  models.py  parser.py  printer.py  task.py  terminal_task_system.py  variables.py
(+42 files in other folders)
