[project]
    name = "vscode-task-runner"
    version = "1.3.1"
    description = "Task runner for VS Code tasks.json"
    license = { text = "MIT" }
    readme = "README.md"
    authors = [{ name = "Nathan Vaughn", email = "nath@nvaughn.email" }]
    classifiers = [
        "Intended Audience :: Developers",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Software Development :: Build Tools",
    ]
    requires-python = ">=3.9"
    dependencies = [
        "shellingham==1.5.4",
        "pyjson5==1.6.6",
        "dacite==1.8.1",
        "questionary==2.0.1",
        "colorama==0.4.6",
    ]

[project.urls]
    Homepage   = "https://github.com/NathanVaughn/vscode-task-runner"
    Repository = "https://github.com/NathanVaughn/vscode-task-runner.git"
    Issues     = "https://github.com/NathanVaughn/vscode-task-runner/issues"

[tool.uv]
    dev-dependencies = [
        "pre-commit>=3.2.0",
        "pre-commit-uv>=3.8.0",
        "pytest>=7.3.1",
        "pytest-mock>=3.10.0",
        "pytest-cov>=4.1",
    ]

[project.scripts]
    vtr                = "vscode_task_runner.console:run"
    vscode-task-runner = "vscode_task_runner.console:run"

[tool.pyright]
    typeCheckingMode           = "basic"
    venvPath                   = "."
    venv                       = ".venv"
    reportMissingParameterType = true

[tool.ruff]
    target-version = "py39"

[build-system]
    requires      = ["hatchling"]
    build-backend = "hatchling.build"
