[project]
    name = "vscode-task-runner"
    version = "2.0.1"
    description = "Task runner for VS Code tasks.json"
    readme = "README.md"
    authors = [{ name = "Nathan Vaughn", email = "nath@nvaughn.email" }]
    classifiers = [
        "Intended Audience :: Developers",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Software Development :: Build Tools",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
    ]
    requires-python = ">=3.9"
    dependencies = [
        "shellingham>=1.5.4",
        "pyjson5>=1.6.7",
        "questionary>=2.0.1",
        "colorama>=0.4.6",
        "pydantic>=2.11.3",
]

[dependency-groups]
    dev = [
        "pre-commit>=3.2.0",
        "pytest>=7.3.1",
        "pytest-mock>=3.10.0",
        "pytest-cov>=4.1",
    ]

[project.urls]
    Homepage   = "https://github.com/NathanVaughn/vscode-task-runner"
    Repository = "https://github.com/NathanVaughn/vscode-task-runner.git"
    Issues     = "https://github.com/NathanVaughn/vscode-task-runner/issues"

[project.scripts]
    vtr                = "vscode_task_runner.console:run"
    vscode-task-runner = "vscode_task_runner.console:run"

[tool.pyright]
    pythonVersion              = "3.9" # set to minimum supported version
    typeCheckingMode           = "basic"
    venvPath                   = "."
    venv                       = ".venv"
    reportMissingParameterType = true

[tool.ruff.lint.flake8-tidy-imports]
    ban-relative-imports = "all"

[build-system]
    requires      = ["hatchling"]
    build-backend = "hatchling.build"
