[project]
    name = "vscode-task-runner"
    version = "3.1.0"
    description = "Task runner for VS Code tasks.json"
    readme = "README.md"
    authors = [{ name = "Nathan Vaughn", email = "nath@nvaughn.email" }]
    license = "MIT"
    classifiers = [
        "Intended Audience :: Developers",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Software Development :: Build Tools",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
    ]
    requires-python = ">=3.9"
    dependencies = [
        "shellingham>=1.5.4",
        "pyjson5>=1.6.7",
        "questionary>=2.0.1",
        "colorama>=0.4.6",
        "pydantic>=2.11.3",
    ]

[dependency-groups]
    dev = [
        "pytest>=7.3.1",
        "pytest-mock>=3.10.0",
        "pytest-cov>=4.1",
        "types-colorama>=0.4.15.20250801",
        "prek>=0.4.4",
]

[project.urls]
    Homepage   = "https://github.com/NathanVaughn/vscode-task-runner"
    Repository = "https://github.com/NathanVaughn/vscode-task-runner.git"
    Issues     = "https://github.com/NathanVaughn/vscode-task-runner/issues"

[project.scripts]
    vtr                = "vscode_task_runner.console:run"
    vscode-task-runner = "vscode_task_runner.console:run"

[tool.ruff.lint]
    select = ["ANN"]
    ignore = ["ANN401"]

[tool.ruff.lint.flake8-tidy-imports]
    ban-relative-imports = "all"

[tool.ty.src]
    exclude = ["tests/"]

[tool.uv]
    required-version = ">=0.8.0"

[tool.uv.build-backend]
    module-root = ""

[build-system]
    requires      = ["uv_build>=0.11.14,<0.12"]
    build-backend = "uv_build"
